fix(disease-card): add max-width to properly truncate regions and systems

--- a/frontend/src/app/components/disease-card/disease-card.scss
+++ b/frontend/src/app/components/disease-card/disease-card.scss
@@ -33,3 +33,7 @@
   block-size: 1.5rem;
   inline-size: 8rem;
 }
+
+.disease-card-name {
+  max-inline-size: calc(100% - 40px);
+}
